<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEmployee">

    <EditText
        android:id="@+id/employee_position_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/employee_position_label"
        app:layout_constraintTop_toBottomOf="@+id/employee_address_edittext" />

    <Button
        android:id="@+id/add_employee_button"
        android:layout_width="205dp"
        android:layout_height="42dp"
        android:layout_marginTop="52dp"
        android:onClick="getValues"
        android:text="@string/add_employee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employee_position_edittext" />

    <TextView
        android:id="@+id/employee_position_label"
        android:layout_width="190dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:text="@string/position"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employee_address_label" />

    <TextView
        android:id="@+id/employee_address_label"
        android:layout_width="189dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/address"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employee_age_label" />

    <TextView
        android:id="@+id/employee_age_label"
        android:layout_width="187dp"
        android:layout_height="43dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/age"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employee_id_label" />

    <EditText
        android:id="@+id/employee_name_edittext"
        android:layout_width="205dp"
        android:layout_height="51dp"
        android:layout_marginTop="124dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/employee_name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/employee_name_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/employee_name_label"
        android:layout_width="188dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:text="@string/employee_name"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/employee_age_edittext"
        android:layout_width="195dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/employee_age_label"
        app:layout_constraintTop_toBottomOf="@+id/employee_id_edittext" />

    <TextView
        android:id="@+id/employee_id_label"
        android:layout_width="188dp"
        android:layout_height="44dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/id"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employee_name_label" />

    <EditText
        android:id="@+id/employee_address_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/employee_address_label"
        app:layout_constraintTop_toBottomOf="@+id/employee_age_edittext" />

    <EditText
        android:id="@+id/employee_id_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/employee_id_label"
        app:layout_constraintTop_toBottomOf="@+id/employee_name_edittext" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="193dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/add_employee_header"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>